Assets/Plugins/RenderHeads/AVProMovieCapture/Runtime/Plugins/iOS/AVProMovieCapture.framework/Headers/MovieCapture.h

NS_ASSUME_NONNULL_BEGIN

void *AVPMC_GetRenderEventFunc(void);
void *AVPMC_GetFreeResourcesEventFunc(void);
bool  AVPMC_Init(void);
void  AVPMC_Deinit(void);
void  AVPMC_SetMicrophoneRecordingHint(bool enabled, MCMicrophoneRecordingOptions options);
bool  AVPMC_IsTrialVersion(void);
int   AVPMC_GetVideoCodecMediaApi(int index);
int   AVPMC_GetVideoCodecCount(void);
bool  AVPMC_IsConfigureVideoCodecSupported(int index);
void  AVPMC_ConfigureVideoCodec(int index);
int   AVPMC_GetAudioCodecMediaApi(int index);
int   AVPMC_GetAudioCodecCount(void);
bool  AVPMC_IsConfigureAudioCodecSupported(int index);
void  AVPMC_ConfigureAudioCodec(int index);
int   AVPMC_GetAudioInputDeviceCount(void);